--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 main {
-  background: url('./Imagens/cartao.png');
+  background-image: url('./Imagens/cartao.png');
   width: 375px;
   height: 812px;
 }
